Fix misaligned text on idea combination popup. Close #34

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -962,6 +962,7 @@ div.w2p_flash.alert {
 
     #combineIdeas .ideaInput {
         display: none;
+        clear: both;
     }
 
 .combinationType {
